2010-03-22  Yi Shen  <shenyi2006@gmail.com>

Reviewed by Simon Hausmann.

        https://bugs.webkit.org/show_bug.cgi?id=35933
        [Qt] [Symbian] Can not backward select (highlight) text using virtual keyboard
        Make sure the selection start index is smaller than the selection end index.

        * Api/qwebpage.cpp:
        (QWebPagePrivate::inputMethodEvent):
        * tests/qwebpage/tst_qwebpage.cpp:
        (tst_QWebPage::inputMethods):

Canonical link: https://commits.webkit.org/47628@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@56334 268f45cc-cd09-0410-ab3c-d52691b4dbfc